--- a/android-client/android-client/src/debug/res/values/google_maps_api.xml
+++ b/android-client/android-client/src/debug/res/values/google_maps_api.xml
@@ -14,5 +14,5 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     string in this file.
     --></string>
 
-    <string name="google_maps_key" templateMergeStrategy="preserve">KOD</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyA1lI9wXEpXgxvlbR7XX66TzxuUUIQlCQw</string>
 </resources>
