--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_1.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_1.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="pl.lodz.p.ftims.geocaching.GUI.Dodaj_wskazowke_1">
+    tools:context="pl.lodz.p.ftims.geocaching.GUI.Dodaj_wskazowke_1"
+    android:background="@drawable/tlo_aplikacja">
 
     <Button
         android:layout_width="110dp"
@@ -16,10 +17,10 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="146dp"
-        android:layout_x="6dp"
-        android:layout_y="110dp"
+        android:layout_width="333dp"
+        android:layout_height="113dp"
+        android:layout_x="-32dp"
+        android:layout_y="150dp"
         android:weightSum="1">
 
         <TextView
@@ -28,10 +29,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/DNW_Opis_Wyzwania"
             android:id="@+id/Opis_text"
-            android:layout_weight="1.11" />
+            android:layout_weight="0.28" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="136dp"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:ems="10"
@@ -42,8 +43,8 @@
         android:orientation="vertical"
         android:layout_width="288dp"
         android:layout_height="138dp"
-        android:layout_x="6dp"
-        android:layout_y="5dp">
+        android:layout_x="-51dp"
+        android:layout_y="0dp">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -116,8 +117,8 @@
         android:layout_y="416dp" />
 
     <ImageView
-        android:layout_width="168dp"
-        android:layout_height="168dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/Zdjecie"
         android:layout_x="4dp"
         android:layout_y="266dp" />
