--- a/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
+++ b/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
@@ -4,14 +4,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="pl.lodz.p.ftims.geocaching.Edycja_wskazowki">
+    tools:context="pl.lodz.p.ftims.geocaching.Edycja_wskazowki"
+    android:background="@drawable/tlo_aplikacja">
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="323dp"
         android:layout_height="wrap_content"
-        android:layout_x="34dp"
-        android:layout_y="442dp">
+        android:layout_x="-36dp"
+        android:layout_y="433dp">
 
         <Button
             android:layout_width="151dp"
