--- a/android-client/android-client/src/main/res/layout/activity_informacje_o_wskazowce.xml
+++ b/android-client/android-client/src/main/res/layout/activity_informacje_o_wskazowce.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.lodz.p.ftims.geocaching.informacje_o_wskazowce"
-    >
+    android:background="@drawable/tlo_aplikacja">
 
     <ScrollView
         android:layout_width="wrap_content"
