--- a/android-client/android-client/src/main/res/layout/activity_logowanie.xml
+++ b/android-client/android-client/src/main/res/layout/activity_logowanie.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Logowanie"
-    android:background="@drawable/tlo_pierwotne">
+    android:background="@drawable/tlo_aplikacja">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,7 +13,7 @@
         android:text="@string/Nazwa_Aplikacji"
         android:id="@+id/textView"
         android:layout_marginTop="83dp"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_centerHorizontal="true"
         android:textColor="#ff3447ff" />
 
