--- a/android-client/android-client/src/main/res/layout/activity_mapy.xml
+++ b/android-client/android-client/src/main/res/layout/activity_mapy.xml
@@ -4,18 +4,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
->
+    android:background="@drawable/Logo">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="350dp"
+        android:layout_width="305dp"
         android:layout_height="440dp"
         android:id="@+id/map"
         android:layout_gravity="center"
         tools:context="pl.lodz.p.ftims.geocaching.Mapy"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_x="0dp"
-        android:layout_y="0dp" />
+        android:layout_x="-22dp"
+        android:layout_y="-28dp" />
 
     <Button
         android:layout_width="350dp"
