--- a/android-client/android-client/src/main/res/layout/activity_zmiana_hasla.xml
+++ b/android-client/android-client/src/main/res/layout/activity_zmiana_hasla.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="pl.lodz.p.ftims.geocaching.ZmianaHasla">
+    tools:context="pl.lodz.p.ftims.geocaching.ZmianaHasla"
+    android:background="@drawable/tlo_aplikacja">
 
     <LinearLayout
         android:orientation="vertical"
