--- a/android-client/android-client/src/main/res/layout/l_profil2.xml
+++ b/android-client/android-client/src/main/res/layout/l_profil2.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tlo_pierwotne"
+    android:background="@drawable/tlo_aplikacja"
     tools:context="pl.lodz.p.ftims.geocaching.Profil">
 
     <TableLayout
