--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
@@ -1,11 +1,12 @@
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingRight="10dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.lodz.p.ftims.geocaching.Dodaj_wskazowke_2"
-    android:background="@drawable/tlo_aplikacja">
+    android:background="@drawable/tlo_aplikacja"
+    android:paddingLeft="10dp">
 
     <TextView
         android:layout_width="151dp"
@@ -13,8 +14,17 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/DNW2_wskazówki"
         android:id="@+id/Wskazowki_text"
-        android:layout_x="36dp"
-        android:layout_y="13dp" />
+        android:layout_x="-22dp"
+        android:layout_y="29dp"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold|italic"
+        android:textSize="25dp"
+        android:gravity="center" />
 
     <Button
         android:layout_width="wrap_content"
@@ -23,32 +33,24 @@
         android:id="@+id/Dodaj_wskazowke_text"
         android:layout_x="20dp"
         android:layout_y="92dp"
-        android:onClick="Dodaj_wskazowke"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/DNW2_Zatwierdź"
-        android:id="@+id/Zatwierdź_wyzwanie"
-        android:layout_x="132dp"
-        android:layout_y="426dp"
-        android:onClick="CzyChceszZatwierdzić"/>
-
-    <Button
-        android:layout_width="102dp"
-        android:layout_height="wrap_content"
-        android:text="@string/DNW2_cofnij"
-        android:id="@+id/Wstecz"
-        android:layout_x="13dp"
-        android:layout_y="426dp"
-        android:onClick="Cofnij_W2"/>
+        android:onClick="Dodaj_wskazowke"
+        android:layout_row="0"
+        android:layout_column="1"
+        android:layout_columnSpan="1"
+        android:layout_above="@+id/scrollView3"
+        android:layout_centerHorizontal="true" />
 
     <ScrollView
-        android:layout_width="337dp"
+        android:layout_width="350dp"
         android:layout_height="252dp"
         android:id="@+id/scrollView3"
-        android:layout_x="-43dp"
-        android:layout_y="154dp" >
+        android:layout_x="-50dp"
+        android:layout_y="154dp"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/Zatwierdź_wyzwanie">
 
         <TableLayout
             android:layout_width="fill_parent"
@@ -56,35 +58,76 @@
 
             <TableRow
                 android:id="@+id/tableRow1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:baselineAligned="false">
 
                 <TextView
                     android:paddingRight="10dp"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="NR"
-                    android:id="@+id/textView1" />
+                    android:id="@+id/textView1"
+                    android:layout_column="1"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:paddingRight="10dp"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="OPIS"
                     android:id="@+id/textView11"
-                    android:layout_column="1" />
+                    android:layout_column="2"
+                    android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="ODLEGLOSC/KORDY"
+                    android:text="ODLEGLOSC"
                     android:id="@+id/textView12"
-                    android:layout_column="2" />
+                    android:layout_column="6"
+                    android:layout_weight="1" />
+
             </TableRow>
 
             </TableLayout>
     </ScrollView>
-</AbsoluteLayout>
+
+    <Button
+        android:layout_width="114dp"
+        android:layout_height="wrap_content"
+        android:text="@string/DNW2_cofnij"
+        android:id="@+id/Wstecz"
+        android:layout_x="13dp"
+        android:layout_y="426dp"
+        android:onClick="Cofnij_W2"
+        android:layout_row="14"
+        android:layout_column="0"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/scrollView3"
+        android:layout_alignStart="@+id/scrollView3"
+        android:layout_marginLeft="36dp"
+        android:layout_marginStart="36dp" />
+
+    <Button
+        android:layout_width="123dp"
+        android:layout_height="wrap_content"
+        android:text="@string/DNW2_Zatwierdź"
+        android:id="@+id/Zatwierdź_wyzwanie"
+        android:layout_x="132dp"
+        android:layout_y="426dp"
+        android:onClick="CzyChceszZatwierdzić"
+        android:layout_row="14"
+        android:layout_column="1"
+        android:layout_columnSpan="1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/scrollView3"
+        android:layout_alignEnd="@+id/scrollView3"
+        android:layout_marginRight="32dp"
+        android:layout_marginEnd="32dp" />
+</RelativeLayout>
