--- a/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
+++ b/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
@@ -1,7 +1,6 @@
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.lodz.p.ftims.geocaching.Edycja_wskazowki"
@@ -11,11 +10,11 @@
         android:orientation="horizontal"
         android:layout_width="323dp"
         android:layout_height="wrap_content"
-        android:layout_x="-36dp"
-        android:layout_y="433dp">
+        android:layout_x="75dp"
+        android:layout_y="440dp">
 
         <Button
-            android:layout_width="151dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/DNW2_cofnij"
             android:id="@+id/Cofnij"
@@ -27,7 +26,7 @@
             android:onClick="Cofnij_D3"/>
 
         <Button
-            android:layout_width="151dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="@string/Zatwierdź"
             android:id="@+id/Dodaj"
@@ -41,23 +40,26 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="132dp"
+        android:layout_width="356dp"
+        android:layout_height="144dp"
         android:layout_x="11dp"
         android:layout_y="18dp">
 
         <TextView
-            android:layout_width="165dp"
-            android:layout_height="match_parent"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/Opis_Wskazowki"
             android:id="@+id/Opis_text"
             android:layout_x="15dp"
-            android:layout_y="43dp" />
+            android:layout_y="43dp"
+            android:gravity="center_vertical"
+            android:textColor="#ff000000"
+            android:textSize="18dp" />
 
         <EditText
-            android:layout_width="181dp"
-            android:layout_height="wrap_content"
+            android:layout_width="203dp"
+            android:layout_height="40dp"
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/editText"
@@ -66,29 +68,35 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="122dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/DNW3_Koordynaty"
         android:id="@+id/Koordynaty_text"
         android:layout_x="17dp"
-        android:layout_y="157dp" />
+        android:layout_y="157dp"
+        android:gravity="center_vertical"
+        android:textColor="#ff000000"
+        android:textSize="18dp" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/DNW3_Zdjecie"
         android:id="@+id/Zdjecie_text"
         android:layout_x="20dp"
-        android:layout_y="258dp" />
+        android:layout_y="258dp"
+        android:gravity="center_vertical"
+        android:textColor="#ff000000"
+        android:textSize="18dp" />
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="124dp"
         android:layout_x="12dp"
-        android:layout_y="306dp">
+        android:layout_y="300dp">
 
         <ImageButton
             android:layout_width="44dp"
@@ -108,10 +116,11 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="186dp"
-        android:layout_height="186dp"
+        android:layout_width="164dp"
+        android:layout_height="164dp"
         android:id="@+id/Zdjecie2"
-        android:layout_x="154dp"
-        android:layout_y="262dp" />
+        android:layout_x="179dp"
+        android:layout_y="265dp"
+        android:adjustViewBounds="true" />
 
 </AbsoluteLayout>
