--- a/android-client/android-client/src/main/res/layout/activity_zmiana_hasla.xml
+++ b/android-client/android-client/src/main/res/layout/activity_zmiana_hasla.xml
@@ -1,7 +1,7 @@
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="pl.lodz.p.ftims.geocaching.ZmianaHasla"
@@ -9,122 +9,128 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="259dp"
-        android:layout_x="15dp"
-        android:layout_y="99dp"
+        android:layout_width="344dp"
+        android:layout_height="190dp"
+        android:layout_x="10dp"
+        android:layout_y="150dp"
         android:weightSum="1">
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="323dp"
-            android:layout_height="64dp"
-            android:layout_x="15dp"
-            android:layout_y="19dp"
+            android:layout_width="320dp"
+            android:layout_height="50dp"
             android:weightSum="1">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="42dp"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/ZH_Stare_Haslo"
                 android:id="@+id/StareHaslo_text"
                 android:layout_x="40dp"
                 android:layout_y="83dp"
-                android:layout_weight="0.40" />
+                android:layout_weight="0"
+                android:textColor="#ff000000"
+                android:textSize="20dp"
+                android:gravity="bottom|fill_vertical" />
 
             <EditText
-                android:layout_width="99dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:id="@+id/StareHaslo"
                 android:layout_x="210dp"
                 android:layout_y="75dp"
-                android:layout_weight="0.65"
                 android:inputType="text" />
 
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="327dp"
-            android:layout_height="70dp"
+            android:layout_width="320dp"
+            android:layout_height="50dp"
             android:layout_x="27dp"
             android:layout_y="77dp"
             android:weightSum="1">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/ZH_Nowe_Haslo"
                 android:id="@+id/NoweHaslo_text"
                 android:layout_x="65dp"
                 android:layout_y="161dp"
-                android:layout_weight="0.47" />
+                android:layout_weight="0"
+                android:textColor="#ff000000"
+                android:textSize="20dp"
+                android:gravity="bottom|fill_vertical" />
 
             <EditText
-                android:layout_width="116dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:id="@+id/NoweHaslo"
-                android:layout_x="203dp"
-                android:layout_y="149dp"
-                android:layout_weight="0.38"
                 android:inputType="text" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
+            android:layout_width="320dp"
+            android:layout_height="50dp"
             android:layout_x="21dp"
             android:layout_y="296dp"
             android:weightSum="1"
             android:layout_weight="0.15">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/ZH_Powtorz_Nowe_Haslo"
+                android:text="Powtórz hasło"
                 android:id="@+id/NoweHasloPowtorz_text"
                 android:layout_x="48dp"
                 android:layout_y="211dp"
-                android:layout_weight="0.41" />
+                android:layout_weight="0"
+                android:textColor="#ff000000"
+                android:textSize="20dp"
+                android:gravity="bottom|fill_vertical" />
 
             <EditText
-                android:layout_width="147dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:id="@+id/NoweHasloPowtorz"
                 android:layout_x="207dp"
                 android:layout_y="230dp"
-                android:layout_weight="0.31"
                 android:inputType="text" />
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="106dp"
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="@string/DNW2_cofnij"
+        android:id="@+id/CofnijZmiana"
+        android:onClick="CofnijZmianeHasla"
         android:layout_x="50dp"
-        android:layout_y="333dp">
+        android:layout_y="420dp" />
 
-        <Button
-            android:layout_width="135dp"
-            android:layout_height="95dp"
-            android:text="@string/DNW2_cofnij"
-            android:id="@+id/CofnijZmiana"
-            android:onClick="CofnijZmianeHasla"
-            android:layout_x="216dp"
-            android:layout_y="370dp" />
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="@string/Zatwierdź"
+        android:id="@+id/ZatwierdźZmiana"
+        android:onClick="ZatwierdźZmianaHasla"
+        android:layout_x="197dp"
+        android:layout_y="420dp" />
 
-        <Button
-            android:layout_width="141dp"
-            android:layout_height="92dp"
-            android:text="@string/Zatwierdź"
-            android:id="@+id/ZatwierdźZmiana"
-            android:onClick="ZatwierdźZmianaHasla"
-            android:layout_x="38dp"
-            android:layout_y="366dp" />
-    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Zmiana Hasła"
+        android:id="@+id/textView16"
+        android:layout_x="90dp"
+        android:layout_y="45dp"
+        android:gravity="fill_vertical|center_horizontal"
+        android:textSize="28dp"
+        android:textStyle="bold" />
 </AbsoluteLayout>
