--- a/android-client/android-client/src/main/res/layout/ekran_startowy.xml
+++ b/android-client/android-client/src/main/res/layout/ekran_startowy.xml
@@ -3,23 +3,23 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@drawable/tlo_aplikacja">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="GeoCaching"
-        android:id="@+id/textView2"
-        android:textColor="#ff200eff"
-        android:layout_above="@+id/progressBar"
+        android:id="@+id/imageView3"
+        android:layout_marginTop="90dp"
+        android:src="@drawable/logo"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="133dp" />
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="10dp" />
 
     <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="90dp" />
+        android:layout_marginBottom="92dp" />
+
 </RelativeLayout>
