--- a/android-client/android-client/src/main/res/layout/activity_informacje_o_wskazowce.xml
+++ b/android-client/android-client/src/main/res/layout/activity_informacje_o_wskazowce.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/scrollView4"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView"
         android:layout_above="@+id/button2">
+<!--    android:layout_toRightOf="@+id/imageView"  TODO: nie da się, bo są w innych layoutach
+        android:layout_toEndOf="@+id/imageView"  -->
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -52,9 +52,9 @@
                 android:minWidth="330dp"
                 android:id="@+id/imageView"
                 android:layout_below="@+id/textView14"
-                android:layout_alignTop="@+id/scrollView4"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
+<!--            android:layout_alignTop="@+id/scrollView4" TODO: Niestety, jego nie ma w tym layoucie -->
         </RelativeLayout>
     </ScrollView>
 
