--- a/android-client/android-client/src/main/res/layout/activity_mapy.xml
+++ b/android-client/android-client/src/main/res/layout/activity_mapy.xml
@@ -6,8 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/logo">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <fragment
         android:layout_width="305dp"
         android:layout_height="440dp"
         android:id="@+id/map"
