--- a/android-client/android-client/src/main/res/menu/menu_profil.xml
+++ b/android-client/android-client/src/main/res/menu/menu_profil.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="pl.lodz.p.ftims.geocaching.GUI.Profil">
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:context="pl.lodz.p.ftims.geocaching.GUI.Profil">
 
     <!-- Profil -->
 <!--
@@ -8,7 +9,7 @@
         android:id="@+id/ekran_Profil"
         android:title="@string/ekran_Profil"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 -->
 
     <!-- Ranking -->
@@ -16,21 +17,21 @@
         android:id="@+id/ekran_Ranking"
         android:title="@string/ekran_Ranking"
         android:orderInCategory="101"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <!-- Mapa -->
     <item
         android:id="@+id/ekran_Mapa"
         android:title="@string/ekran_Mapa"
         android:orderInCategory="102"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <!-- Stwórz wyzwanie -->
     <item
         android:id="@+id/ekran_Stworz_wyzwanie"
         android:title="@string/ekran_Stworz_wyzwanie"
         android:orderInCategory="103"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
 
 
@@ -39,12 +40,12 @@
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="104"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
     <!-- Exit -->
     <item
         android:id="@+id/action_exit"
         android:title="@string/action_exit"
         android:orderInCategory="105"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
 </menu>
