--- a/android-client/android-client/src/main/res/menu/popup_menu.xml
+++ b/android-client/android-client/src/main/res/menu/popup_menu.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_exit"
         android:title="@string/action_exit"
         android:orderInCategory="102"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
 </menu>
