--- a/android-client/android-client/src/main/res/layout/l_profil2.xml
+++ b/android-client/android-client/src/main/res/layout/l_profil2.xml
@@ -37,6 +37,30 @@
 
         <TableRow
             android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/email"
+                android:id="@+id/email"
+                android:layout_column="0"
+                android:textColor="#ff08ffea" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text=""
+                android:id="@+id/emailText"
+                android:layout_column="2"
+                android:textColor="#fff0fcff" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/b">
 
@@ -88,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ZH_Edytuj"
-        android:onClick="ZmienHaslo"
+        android:onClick="zmienHaslo"
         android:id="@+id/HasloButton"
         android:layout_gravity="right" />
 
