Właśnie zatrybił mi GPS i ładnie scentrował mapkę na moim domu. Poimplementowałem też trochę funkcji do naprowadzania użytkownika na hinty, lecz tutaj mi brakuje już trochę elementów gui.

--- a/android-client/android-client/src/main/res/layout/activity_mapy.xml
+++ b/android-client/android-client/src/main/res/layout/activity_mapy.xml
@@ -19,7 +19,7 @@
     <Button
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@string/mapy_activity_akcje"
         android:id="@+id/button"
         android:layout_x="0dp"
         android:layout_y="437dp" />
