--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_1.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_1.xml
@@ -1,5 +1,6 @@
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="400dp"
+    xmlns:tools="http://schemas.android.com/tools" 
+    android:layout_width="400dp"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,20 +10,20 @@
     android:paddingRight="10dp">
 
     <Button
+        android:id="@+id/Dalej"
         android:layout_width="110dp"
         android:layout_height="50dp"
-        android:text="@string/DNW_Przycisk"
-        android:id="@+id/Dalej"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/Zdjecie"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_x="238dp"
-        android:layout_y="426dp" />
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/Zdjecie"
+        android:layout_x="170dp"
+        android:layout_y="370dp"
+        android:text="@string/DNW_Przycisk" />
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="350dp"
+        android:layout_width="290dp"
         android:layout_height="133dp"
         android:weightSum="1"
         android:id="@+id/linearLayout"
@@ -53,7 +54,7 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="350dp"
+        android:layout_width="290dp"
         android:layout_height="100dp"
         android:gravity="center_vertical"
         android:id="@+id/linearLayout2"
@@ -66,7 +67,7 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:weightSum="1">
 
@@ -91,7 +92,7 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:weightSum="1">
 
@@ -106,47 +107,52 @@
                 android:layout_gravity="left" />
 
             <EditText
+                android:id="@+id/Hasło"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/Hasło"
+                android:ems="10"
+                android:gravity="bottom|center_horizontal"
                 android:inputType="text"
-                android:visibility="invisible"
-                android:gravity="bottom|center_horizontal" />
+                android:visibility="invisible" >
+
+                <requestFocus />
+            </EditText>
+
         </LinearLayout>
 
     </LinearLayout>
 
     <ImageButton
+        android:id="@+id/ZdjecieZAparatu"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/ZdjecieZAparatu"
-        android:onClick="ZdjecieKamera"
-        android:layout_x="10dp"
-        android:layout_y="426dp"
         android:layout_below="@+id/Zdjecie"
+        android:layout_toEndOf="@+id/ZdjecieZPamieci"
         android:layout_toRightOf="@+id/ZdjecieZPamieci"
-        android:layout_toEndOf="@+id/ZdjecieZPamieci" />
+        android:layout_x="10dp"
+        android:layout_y="370dp"
+        android:onClick="ZdjecieKamera" />
 
     <ImageButton
+        android:id="@+id/ZdjecieZPamieci"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/ZdjecieZPamieci"
-        android:onClick="ZdjeciePamiec"
-        android:layout_x="76dp"
-        android:layout_y="426dp"
-        android:layout_below="@+id/Zdjecie"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/Zdjecie"
+        android:layout_x="76dp"
+        android:layout_y="370dp"
+        android:onClick="ZdjeciePamiec" />
 
     <ImageView
-        android:layout_width="126dp"
-        android:layout_height="126dp"
         android:id="@+id/Zdjecie"
-        android:layout_y="292dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_above="@+id/Dalej"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_x="115dp" />
+        android:layout_x="60dp"
+        android:layout_y="292dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
