--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" 
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingRight="10dp"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -65,25 +66,30 @@
                 android:baselineAligned="false">
 
                 <TextView
-                    android:paddingRight="10dp"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="NR"
                     android:id="@+id/textView1"
+                    android:layout_width="warp_content"
+                    android:layout_height="wrap_content"
                     android:layout_column="1"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:paddingRight="10dp"
+                    android:text="NR"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:textsice="5sp" />
 
                 <TextView
-                    android:paddingRight="10dp"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="OPIS"
                     android:id="@+id/textView11"
+                    android:layout_width="warp_content"
+                    android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:paddingRight="10dp"
+                    android:text="OPIS"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:textsice="5sp" />
 
+<!--
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -92,7 +98,7 @@
                     android:id="@+id/textView12"
                     android:layout_column="6"
                     android:layout_weight="1" />
-
+  -->
             </TableRow>
 
             </TableLayout>
