--- a/android-client/android-client/src/main/res/layout/activity_logowanie.xml
+++ b/android-client/android-client/src/main/res/layout/activity_logowanie.xml
@@ -104,17 +104,6 @@
         android:layout_toEndOf="@+id/Haslo_Text"
         android:onClick="doLogin"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Rejestruj"
-        android:id="@+id/Rejestruj"
-        android:layout_below="@+id/Zapamietac"
-        android:layout_marginTop="48dp"
-        android:layout_toRightOf="@+id/OK"
-        android:layout_toEndOf="@+id/OK"
-        android:onClick="doRegister"/>
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -124,4 +113,25 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/Rejestruj"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/OK"
+        android:layout_alignParentRight="false"
+        android:layout_alignRight="@+id/Zapamietac"
+        android:layout_alignTop="@+id/OK"
+        android:layout_toEndOf="@+id/OK"
+        android:onClick="doRegister"
+        android:text="@string/Rejestruj" />
+
+    <Button
+        android:id="@+id/rejestracja"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Rejestruj"
+        android:layout_alignRight="@+id/Rejestruj"
+        android:text="Rejestracja" />
+
 </RelativeLayout>
