--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
@@ -67,27 +67,25 @@
 
                 <TextView
                     android:id="@+id/textView1"
-                    android:layout_width="warp_content"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
                     android:layout_weight="1"
                     android:paddingRight="10dp"
                     android:text="NR"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="15sp"
-                    android:textsice="5sp" />
+                    android:textSize="15sp"/>
 
                 <TextView
                     android:id="@+id/textView11"
-                    android:layout_width="warp_content"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
                     android:layout_weight="1"
                     android:paddingRight="10dp"
                     android:text="OPIS"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="15sp"
-                    android:textsice="5sp" />
+                    android:textSize="15sp"/>
 
 <!--
                 <TextView
