--- a/android-client/android-client/src/main/res/layout/activity_logowanie.xml
+++ b/android-client/android-client/src/main/res/layout/activity_logowanie.xml
@@ -96,13 +96,10 @@
         android:layout_height="wrap_content"
         android:text="@string/Zatwierdz"
         android:id="@+id/OK"
+        android:onClick="doLogin"
         android:layout_below="@+id/Zapamietac"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_marginTop="48dp"
-        android:layout_toRightOf="@+id/Haslo_Text"
-        android:layout_toEndOf="@+id/Haslo_Text"
-        android:onClick="doLogin"/>
+        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/Zapamietac" android:layout_toLeftOf="@+id/Zapamietac"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -115,23 +112,11 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:id="@+id/Rejestruj"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/OK"
-        android:layout_alignParentRight="false"
-        android:layout_alignRight="@+id/Zapamietac"
-        android:layout_alignTop="@+id/OK"
-        android:layout_toEndOf="@+id/OK"
-        android:onClick="doRegister"
-        android:text="@string/Rejestruj" />
-
-    <Button
         android:id="@+id/rejestracja"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Rejestruj"
-        android:layout_alignRight="@+id/Rejestruj"
-        android:text="Rejestracja" />
+        android:text="Rejestracja" android:layout_alignBottom="@+id/OK"
+        android:layout_alignRight="@+id/Zapamietac"
+        android:layout_alignParentLeft="false"/>
 
 </RelativeLayout>
