--- a/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
+++ b/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
@@ -96,23 +96,28 @@
         android:layout_width="wrap_content"
         android:layout_height="124dp"
         android:layout_x="12dp"
-        android:layout_y="300dp">
+        android:layout_y="300dp"
+        android:weightSum="1">
 
         <ImageButton
-            android:layout_width="44dp"
+            android:layout_width="56dp"
             android:layout_height="54dp"
             android:id="@+id/ZdjecieKamera"
             android:onClick="ZdjecieKamera2"
             android:layout_x="25dp"
-            android:layout_y="308dp" />
+            android:layout_y="308dp"
+            android:background="@drawable/aparat"
+            android:layout_weight="0.91" />
 
         <ImageButton
-            android:layout_width="44dp"
+            android:layout_width="match_parent"
             android:layout_height="54dp"
             android:id="@+id/ZdjeciePamiec"
             android:onClick="ZdjeciePamiec2"
             android:layout_x="31dp"
-            android:layout_y="385dp" />
+            android:layout_y="385dp"
+            android:background="@drawable/folder"
+            android:layout_weight="1.06" />
     </LinearLayout>
 
     <ImageView
@@ -121,6 +126,73 @@
         android:id="@+id/Zdjecie2"
         android:layout_x="179dp"
         android:layout_y="265dp"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:visibility="visible" />
+
+    <ToggleButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:text=" "
+        android:id="@+id/XY"
+        android:layout_x="90dp"
+        android:layout_y="200dp"
+        android:background="@drawable/XY"
+        android:textOff=" "
+        android:textOn=" "
+        android:onClick="Koordynaty_XY"
+        android:checked="false" />
+
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/imageButton"
+        android:layout_x="8dp"
+        android:layout_y="200dp"
+        android:background="@drawable/Mapa_ikona" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:layout_x="168dp"
+        android:layout_y="202dp"
+        android:weightSum="1"
+        android:visibility="invisible"
+        android:id="@+id/Kordy">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="X:"
+            android:id="@+id/X_Cord"
+            android:textSize="32dp"
+            android:layout_weight="0.13"
+            android:gravity="fill_horizontal|bottom" />
+
+        <EditText
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/X_wartosc"
+            android:layout_weight="0.10"
+            android:layout_gravity="left|bottom" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Y:"
+            android:id="@+id/Y_cord"
+            android:textSize="32dp" />
+
+        <EditText
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/Y_wartosc"
+            android:layout_gravity="left|bottom"
+            android:layout_weight="0.10" />
+    </LinearLayout>
 
 </AbsoluteLayout>
